--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,14 @@
 {{ define "main" }}
 <div class="conteudo singular">
+
+  <div class="conteudo-inner">
   <header><h1>{{.Title}}</h1></header>
   {{.Content}}
+  </div>
+  {{ partial "rodape.html" }}
 </div>
+
+
+
 {{end}}
+
