--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -170,6 +170,7 @@ body, html, .pagina {
   .conteudo {
     width: calc(100% - 40%);
     overflow-y: scroll;
+    padding-top: var(--base-espaco-p);
   }
 
   .home-banner {
@@ -348,6 +349,30 @@ body, html, .pagina {
     top: 0;
   }
 }
+
+/* Paginas
+--------------------------------------*/
+
+@media screen and (min-width: 60rem) {
+  .conteudo-inner {
+    padding-left: var(--base-espaco-g);
+    position: relative;
+  }
+
+  .conteudo-inner > *:nth-child(2) {
+    margin-top: 0;
+  }
+
+  header {
+    position: absolute;
+    top: 0;
+    left: 2rem;
+    transform-origin: top left;
+    transform: rotate(90deg);
+  }
+}
+
+
 
 /* Rodapé
 --------------------------------------*/
