--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="canvas-container">
+<div id="canvas-container" class="canvas-container">
   
 </div>
 <div class="home-banner">
