--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,10 +3,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ .Title }} : {{ .Site.Title }}</title>
+
   {{ $style := resources.Get "css/main.css" }}
   {{ $style = $style | fingerprint }}
   <link rel="stylesheet" href="{{ $style.Permalink }}">
+  
   {{ $javascript := resources.Get "js/main.js" }}
   {{ $javascript = $javascript | fingerprint }}
   <script defer src="{{ $javascript.Permalink }}"></script>
+
+  {{ if .IsHome }}
+  
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
+  <script defer src="{{ .Site.BaseURL }}/js/celulas.js"></script>
+  
+  {{ $home_js := resources.Get "js/home.js" }}
+  {{ $home_js = $home_js | fingerprint }}
+  <script defer src="{{ $home_js.Permalink }}"></script>
+  
+  {{ end }}
 </head>
