--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
-<div id="canvas-container" class="canvas-container">
-  
-</div>
+<video id="background-video" autoplay loop muted poster="x">
+  <source src="{{ .Site.BaseURL }}/videos/fundo.mp4" type="video/mp4">
+</video>
 <div class="home-banner">
   {{.Content}}
 
