--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -396,6 +396,13 @@ body, html, .pagina {
   }
 }
 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  header {
+    position: static;
+    transform: none;
+  }
+}
+
 
 
 /* Rodapé
