Correção de algumas urls e build

--- a/layouts/partials/rodape.html
+++ b/layouts/partials/rodape.html
@@ -1,3 +1,3 @@
 <footer class="rodape">
-  Organizado pela comunidade Processing Brasil, <a href="{{ .Site.BaseURL }}/sobre/">Saiba mais</a>. Conheça nosso <a href="{{ .Site.BaseURL }}/codigo-conduta/">Código de Conduta.</a>
+  Organizado pela comunidade Processing Brasil, <a href="{{ .Site.BaseURL }}sobre/">Saiba mais</a>. Conheça nosso <a href="{{ .Site.BaseURL }}codigo-conduta/">Código de Conduta.</a>
 </footer>
