--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-<video id="background-video" autoplay loop muted poster="{{ .Site.BaseURL }}/videos/video-poster.jpg">
-  <source src="{{ .Site.BaseURL }}/videos/fundo.mp4" type="video/mp4">
+<video id="background-video" autoplay loop muted poster="{{ .Site.BaseURL }}videos/video-poster.jpg">
+  <source src="{{ .Site.BaseURL }}videos/fundo.mp4" type="video/mp4">
 </video>
 <div class="home-banner">
   {{.Content}}
