--- a/layouts/partials/cabecalho.html
+++ b/layouts/partials/cabecalho.html
@@ -31,9 +31,9 @@
     
     <div class="menu">
       <ul>
-        <li><a class="botao-simples" href="{{ .Site.BaseURL }}/sobre">Sobre o evento</a></li>
-        <li><a class="botao-simples" href="{{ .Site.BaseURL }}/comunidade">Comunidade</a></li>
-        <li><a class="botao-simples" href="{{ .Site.BaseURL }}/codigo-conduta">Código de conduta</a></li>
+        <li><a class="botao-simples" href="{{ .Site.BaseURL }}sobre">Sobre o evento</a></li>
+        <li><a class="botao-simples" href="{{ .Site.BaseURL }}comunidade">Comunidade</a></li>
+        <li><a class="botao-simples" href="{{ .Site.BaseURL }}codigo-conduta">Código de conduta</a></li>
       </ul>
     </div>
     
