--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <div class="conteudo singular">
 
   <div class="conteudo-inner">
-  <header><h1>{{.Title}}</h1></header>
+  <header class="pagina-header"><h1>{{.Title}}</h1></header>
   {{.Content}}
   </div>
   {{ partial "rodape.html" }}
