--- a/layouts/shortcodes/programacao_completa.html
+++ b/layouts/shortcodes/programacao_completa.html
@@ -1,9 +1,10 @@
 {{ $parametro_dia := .Get "dia" }}
 {{ $parametro_data := .Get "data" }}
+{{ $parametro_semana := .Get "semana" }}
 
 <div class="programacao-dia">
     <div class="programacao-data">
-        <h2>{{ $parametro_data }}</h2>
+        <h2>{{ $parametro_data }} <span>—</span> {{ $parametro_semana }}</h2>
     </div>
 
     <div class="programacao-itens">
@@ -60,31 +61,31 @@
             </div>
 
             <div class="cta">
-                <a class="plus-button"></a>
+                
                 {{ if eq .eventoAtivo "sim" }}     
-                    <a href="{{ .urlCalendar }}" class="secondary-button" target="blank">Adicionar ao calendário</a>
+                    <a href="{{ .urlCalendar }}" class="botao-simples" target="blank">Adicionar ao calendário</a>
                     
                     {{ if .urlTransmissao }}
-                        <a href="{{ .urlTransmissao }}" class="button button-small" target="blank">Assista no youtube</a>   
+                        <a href="{{ .urlTransmissao }}" class="botao-simples" target="blank">Assista no youtube</a>   
                     {{ else if .urlZoom }}
-                        <a href="{{ .urlZoom }}" class="button button-small" target="blank">Participar no Zoom</a>      
+                        <a href="{{ .urlZoom }}" class="botao-simples" target="blank">Participar no Zoom</a>      
                     {{ else }}
                         {{ if .urlInscricao }}
-                            <!-- <a href="{{ .urlInscricao }}" class="button button-small" target="blank">Inscrição</a> -->
-                            <a href="" class="button button-small inactive-button">Inscrições<br> em breve</a>       
+                            <a href="{{ .urlInscricao }}" class="botao-simples" target="blank">Inscrição</a>
+                            <!-- <a href="" class="button button-small inactive-button">Inscrições<br> em breve</a>        -->
                         {{ end }}
                     {{ end }}
                 {{ end }}
             </div>
 
-
+            <hr>
         </div>
 
-        <hr>
+        
 
         {{ end }}
 
     {{ end }}
-</div>
+    </div>
 </div>
 
