--- a/layouts/shortcodes/programacao_completa.html
+++ b/layouts/shortcodes/programacao_completa.html
@@ -15,11 +15,14 @@
         <div class="programacao-card">
 
             <header class="programacao-card-header">
-            <div class="programacao-card-infos">
-                <h5 class="programacao-card-tipo">{{ .tipo }}</h5>
-                <h4 class="programacao-card-title"><span>{{ .titulo }}</span></h4>
-                <div class="programacao-card-pessoa">{{ .proponente }}</div>
-            </div>             
+                <div class="programacao-card-thumb">
+                    <img src="{{ .url_imagem }}" alt="">
+                </div>  
+                <div class="programacao-card-infos">
+                    <h5 class="programacao-card-tipo">{{ .tipo }}</h5>
+                    <h4 class="programacao-card-title"><span>{{ .titulo }}</span></h4>
+                    <div class="programacao-card-pessoa">{{ .proponente }}</div>
+                </div>        
             </header>
 
             <div class="programacao-card-orientacao">
