--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
 
 {{ partial "head.html" . }}
 
-<body class="{{ if .IsHome }}home{{ end }}">
+<body class="menu-completo {{ if .IsHome }}home{{ end }}">
 
   <div class="pagina">
 
