--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -16,17 +16,23 @@
 
   <meta property="og:url" content="https://pcd2022.encontrosdigitais.com.br">
   <meta property="og:type" content="page">
-  <meta property="og:title" content="Processing Community Day Brasil - 2022">
+  <meta property="og:title" content="{{ .Title }} : Processing Community Day Brasil - 2022">
   <meta property="og:image" content="https://pcd2022.encontrosdigitais.com.br/images/PCD-Br-2022-OgImage.jpg">
-  <meta property="og:description" content="O Processing Community Day é um evento realizado no mundo todo com o objetivo de promover a interação e celebrar a diversidade de pessoas e tecnologias no universo das artes computacionais.">
+
+  {{ $og_description := "O Processing Community Day é um evento realizado no mundo todo com o objetivo de promover a interação e celebrar a diversidade de pessoas e tecnologias no universo das artes computacionais." }}
+  {{ if .Description }}
+   {{ $og_description = .Description }}
+  {{ end }}
+
+  <meta property="og:description" content="{{ $og_description }}">
   <meta property="og:site_name" content="Processing Community Day Brasil - 2022">
 
 
   <!-- Social: Twitter -->
 
   <meta name="twitter:card" content="summary_large_image"> 
-  <meta name="twitter:title" content="Processing Community Day Brasil - 2022">
-  <meta name="twitter:description" content="O Processing Community Day é um evento realizado no mundo todo com o objetivo de promover a interação e celebrar a diversidade de pessoas e tecnologias no universo das artes computacionais.">
+  <meta name="twitter:title" content="{{ .Title }} : Processing Community Day Brasil - 2022">
+  <meta name="twitter:description" content="{{ $og_description }}">
   <meta property="twitter:image:src" content="https://pcd2022.encontrosdigitais.com.br/images/PCD-Br-2022-OgImage.jpg">
 
   <!-- Favicons -->
