revisão galeria e inserção patrocínio fundação

--- a/layouts/partials/cabecalho.html
+++ b/layouts/partials/cabecalho.html
@@ -33,6 +33,7 @@
       <ul>
         <li><a class="botao-simples" href="{{ .Site.BaseURL }}/sobre">Sobre o evento</a></li>
         <li><a class="botao-simples" href="{{ .Site.BaseURL }}/programacao">Programação</a></li>
+        <li><a class="botao-simples" href="{{ .Site.BaseURL }}/galeria">Galeria</a></li>
         <li><a class="botao-simples" href="{{ .Site.BaseURL }}/comunidade">Comunidade</a></li>
         <li><a class="botao-simples" href="{{ .Site.BaseURL }}/codigo-conduta">Código de conduta</a></li>
       </ul>
