--- a/layouts/shortcodes/programacao_completa.html
+++ b/layouts/shortcodes/programacao_completa.html
@@ -77,6 +77,12 @@
                     
                 {{ end }}
 
+                {{ if .url_youtube }}
+                    
+                        <a href="{{ .url_youtube }}" class="botao" target="blank">Assistir no YouTube</a>
+                    
+                {{ end }}
+
                 
             </div>
 
