--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://pcd2022.encontrosdigitais.com.br">
   <meta property="og:type" content="page">
   <meta property="og:title" content="{{ .Title }} : Processing Community Day Brasil - 2022">
-  <meta property="og:image" content="https://pcd2022.encontrosdigitais.com.br/images/PCD-Br-2022-OgImage.jpg">
+  <meta property="og:image" content="https://compoetica.github.io/PCD-Brasil-2022/images/PCD-Br-2022-OgImage.jpg">
 
   {{ $og_description := "O Processing Community Day é um evento realizado no mundo todo com o objetivo de promover a interação e celebrar a diversidade de pessoas e tecnologias no universo das artes computacionais." }}
   {{ if .Description }}
@@ -33,25 +33,25 @@
   <meta name="twitter:card" content="summary_large_image"> 
   <meta name="twitter:title" content="{{ .Title }} : Processing Community Day Brasil - 2022">
   <meta name="twitter:description" content="{{ $og_description }}">
-  <meta property="twitter:image:src" content="https://pcd2022.encontrosdigitais.com.br/images/PCD-Br-2022-OgImage.jpg">
+  <meta property="twitter:image:src" content="https://compoetica.github.io/PCD-Brasil-2022/images/PCD-Br-2022-OgImage.jpg">
 
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="57x57" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  HREF="https://pcd2022.encontrosdigitais.com.br/favicons/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/favicon-16x16.png">
-  <link rel="manifest" HREF="https://pcd2022.encontrosdigitais.com.br/favicons/manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/favicon-16x16.png">
+  <link rel="manifest" HREF="https://compoetica.github.io/PCD-Brasil-2022/favicons/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="https://pcd2022.encontrosdigitais.com.br/favicons/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="https://compoetica.github.io/PCD-Brasil-2022/favicons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
 </head>
